convert to typescript & set web-pack-dev static

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "source-renderer",
   "version": "0.1.0",
   "description": "A lightweight lib for UI render and keep the state of app in one object",
-  "main": "index.js",
+  "main": "index.ts",
   "directories": {
     "test": "test"
   },
